-*- text -*-

To announce to OMPI core testers:

- New funclets:
    - &perl(): MANY more things are possible now!
    - &regexp()
    - &check_ipoib_connectivity()
    - ?&check_ib_connectivty()?
    - &verbose(), &debug(), &print()
    - &env_hosts() can be uniq-ified

- --section: beware of section names with spaces!  s/ /./g in --section
    arguments if you have spaces in your section names.

- $variable expansion in ini files (especially when used with
  &perl()), but it is always SCALAR

- MTT lock server.

- SVN module - choose between "export" and "checkout"
  (defaults to "export"):
  - svn_export = 1 (specify the use of "svn export")
  - svn_checkout = 1 (specify the use of "svn checkout")

- Added support for MPICH2 (and therefore MVAPICH2) and LAM/MPI

- Renamed the MPI install phase field names:
  compiler_name -> ompi_compiler_name (etc.)
  Need to check for backward compatibility

- Fix the mpi_details logic. We now follow 5 specific steps to look for 
  the Right MPI Details section to use: 

  1. Look for an mpi_details field in the current MPI Install phase
     that matches a valid MPI Details section
  2. Look for an mpi_details field in the current MPI Get phase that
     matches a valid MPI Details section
  3. Look for an mpi_install field is any MPI Details section that
     matches the current MPI Install phase
  4. Look for an mpi_get field is any MPI Details section that matches
     the current MPI Get phase
  5. If we didn't find anything above, take the first MPI Details
     section we find

- Cluster description strings for the below fields can be overridden
  in the [MPI Install] and [MTT] INI sections
  - platform_type
  - platform_hardware
  - os_name
  - os_version